# DL

./: .gitignore  ipynb_fix.ipynb  pyproject.toml
GM/: .gitignore  hw1.ipynb
HW/: ipynb_fix.ipynb
HW/HW1/: HW1_Bonus.ipynb  HW1_Light.ipynb  HW1_Light_fixed.ipynb
HW/HW1/modules/: activations.py  criterions.py  layers.py
HW/HW1/tests/: test_criterions.py
HW/HW2/: HW2.ipynb  HW2_fixed.ipynb
HW/HW3/: .gitignore  HW3.ipynb  data.yaml
HW/HW4/: .gitignore  HW4.ipynb  dataset.py  model.py  train.py
NLP_HW/: week_5_homework_BERT.ipynb  week_5_homework_GPT.ipynb  week_5_homework_GPT_fixed.ipynb
