[project]
name = "dl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch==2.6.0",
  "torchvision==0.21.0",
  "torchaudio==2.6.0",
  "numpy==2.2.4",
  "pandas==2.2.3",
  "tqdm==4.67.1",
  "opencv-python==4.11.0.86",
  "scikit-learn==1.6.1",
  "seaborn==0.13.2",
  "ipywidgets>=8.1.5",
  "numba>=0.61.2",
  "nbformat>=5.10.4",
  "wandb>=0.19.9",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" },
]
torchvision = [
  { index = "pytorch-cu126" },
]
torchaudio = [
  { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
